<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="14dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <ImageView
                    android:contentDescription="@string/master_image"
                    android:id="@+id/event_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_launcher_background" />

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/category_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:id="@+id/event_categoty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="18dp"
                        android:layout_marginVertical="4dp"
                        android:textSize="14sp"
                        tools:text="@string/event_category" />

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/event_name"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content"
            tools:text="@string/event_name"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_image"
            />

        <ImageView
            android:contentDescription="@string/location"
            android:id="@+id/location_icon"
            android:layout_marginTop="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name" />

        <TextView
            android:id="@+id/event_location"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/location_icon"
            app:layout_constraintEnd_toStartOf="@+id/registrant_icon"
            app:layout_constraintStart_toEndOf="@id/location_icon"
            app:layout_constraintTop_toTopOf="@id/location_icon"
            tools:text="Online" />

        <ImageView
            android:contentDescription="@string/participant"
            android:id="@+id/registrant_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/people"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@id/location_icon"
            app:layout_constraintEnd_toStartOf="@+id/event_registrant"
            app:layout_constraintTop_toTopOf="@+id/location_icon" />

        <TextView
            android:id="@+id/event_registrant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/registrant_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/registrant_icon"
            tools:text="2000 / 1000" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>